Day 4 part 2.