@@ -2,10 +2,8 @@ package com.adventofcode;
 
 import java.io.*;
 import java.nio.charset.Charset;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.function.Function;
 import java.util.function.IntPredicate;
 import java.util.stream.IntStream;
 
@@ -71,44 +69,54 @@ public class App
 
     private static void partTwo(String input) throws IOException {
         try(var reader = new BufferedReader(new FileReader(input, Charset.forName("UTF-8")))) {
-            var lines = reader.lines()
-                    .collect(toList());
+            var cards = new HashMap<Integer, Integer>();
+            var max = 0;
+
+            for(var line : reader.lines().toList()) {
+                var colon = line.indexOf(':');
+                var card = Integer.parseInt(line.substring(4, colon).trim());
+
+                cards.put(card, cards.getOrDefault(card, 0) + 1);
+
+                var pipe = line.indexOf('|');
+                var winning = Arrays.stream(line.substring(colon + 1, pipe).split("\\s"))
+                        .map(String::trim)
+                        .filter(x -> !x.isEmpty())
+                        .map(Integer::parseInt)
+                        .toList();
+                var numbers = Arrays.stream(line.substring(pipe + 1).split("\\s"))
+                        .map(String::trim)
+                        .filter(x -> !x.isEmpty())
+                        .map(Integer::parseInt)
+                        .toList();
+
+                var matches = 0;
+                for (var number : numbers) {
+                    if (winning.contains(number)) {
+                        matches += 1;
+                    }
+                }
+
+                var copies = cards.get(card) - 1;
+                for (var i = 0; i < matches; i += 1) {
+                    int copy = cards.getOrDefault(card + 1 + i, 0) + 1;
+
+                    if(copies > 0) {
+                        copy += copies;
+                    }
+
+                    cards.put(card + 1 + i, copy);
+                }
+
+                max += 1;
+            }
 
             var sum = 0;
-            var validNumbers = Set.of(
-                    new Number("1", "1"), new Number("one", "1"),
-                    new Number("2", "2"), new Number("two", "2"),
-                    new Number("3", "3"), new Number("three", "3"),
-                    new Number("4", "4"), new Number("four", "4"),
-                    new Number("5", "5"), new Number("five", "5"),
-                    new Number("6", "6"), new Number("six", "6"),
-                    new Number("7", "7"), new Number("seven", "7"),
-                    new Number("8", "8"), new Number("eight", "8"),
-                    new Number("9", "9"), new Number("nine", "9"));
-
-            for (var line : lines) {
-                var first = validNumbers.stream()
-                        .map(x -> new Position(x, line.indexOf(x.Name)))
-                        .filter(x -> x.Position >= 0)
-                        .min(Comparator.comparingInt(a -> a.Position))
-                        .orElseThrow()
-                        .Number
-                        .Value();
-                var last = validNumbers.stream()
-                        .map(x -> new Position(x, line.lastIndexOf(x.Name)))
-                        .filter(x -> x.Position >= 0)
-                        .max(Comparator.comparingInt(a -> a.Position))
-                        .orElseThrow()
-                        .Number
-                        .Value();
-
-                sum += Integer.parseInt(first + last);
+            for(var i=1; i <= max; i += 1) {
+                sum += cards.get(i);
             }
 
             System.out.printf("Answer is: %d%n", sum);
         }
     }
-
-    private record Number(String Name, String Value) {}
-    private record Position(Number Number, int Position) {}
 }
